<resources>
    <string name="app_name">FitSmart</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_nueva_rutina">NuevaRutinaActivity</string>
    <string name="title_activity_nuevo_entreno">NuevoEntrenoActivity</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="newEntreno">Entrenamiento</string>
    <string name="newRutina">Rutina</string>
    <string name="description_nueva_rutina">Crear nueva rutina de ejercicios</string>
    <string name="mis_rutinas">Rutina de ejercicios</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_nivelDificultad">Nivel Dificultad:</string>
    <string name="s_nivelDificultad">Selecciona Nivel Dificultad:</string>
    <string name="hint_grupoMuscular">Grupo Muscular:</string>
    <string name="s_grupoMuscular">Selecciona Grupo Muscular:</string>
    <string name="hint_numSeries">Numero de Series:</string>
    <string name="hint_numRepes">Numero de Repeticiones:</string>
    <string name="hint_dia">Dia:</string>
    <string name="s_dia">Selecciona Dia:</string>
    <string name="btn_guardar">Guardar</string>
    <string name="hint_Altura"> Altura: </string>
    <string name="hint_Peso">Peso:</string>
    <string name="hint_Sexo">Sexo:</string>
    <string name="hint_pesoDeseado">Peso Deseado:</string>
    <string name="hint_edad">Edad:</string>
    <string name="btn_guardar_persona">Guardar</string>
    <string name="s_sexo">Seleccione Sexo</string>
    <string name="newUsuario">Usuarios</string>
    <string name="start">Empezar-></string>
    <string-array name="days_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>


</resources>